apply plugin: 'com.android.application'

android {
    compileSdkVersion 29

    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    defaultConfig {
        applicationId "com.dozingcatsoftware.bouncy"
        minSdkVersion 4
        targetSdkVersion 29
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }
}

// jars and native libraries retrieved from https://oss.sonatype.org/content/repositories/releases/com/badlogicgames/gdx/
dependencies {
    implementation files('libs/gdx-box2d-1.9.10.jar')
    implementation files('libs/gdx-1.9.10.jar')
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5'
}
